--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ python-dotenv
 langchain
 langchain-google-genai
 langchain-community
+langchain-huggingface
 faiss-cpu
 sentence-transformers
 huggingface-hub
