--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-discord.py
-python-dotenv
-langchain>=0.2.15
-langchain-core
-langchain-google-genai
-langchain-community>=0.2.0
-faiss-cpu
-pydantic
-
+discord.py==2.5.2
+python-dotenv==1.1.0
+langchain==0.3.27
+langchain-core==0.3.79
+langchain-google-genai==2.0.10
+langchain-community==0.3.31
+faiss-cpu==1.12.0
+pydantic==2.12.0
 
